Use max-height instead height to fixed mission list scoll area out of box when just few mission list exists.

--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -850,5 +850,5 @@ input[type="checkbox"]:disabled + label::before {
 
 .mission-list-scrollarea {
     overflow-y: auto;
-    height: 600px;
+    max-height: 600px;
 }
